style.css
/* ... */
.links {
    display: flex;
    justify-content: center;

}

.links img {
    padding-top: 3rem;
    padding-inline: 1rem;
}

button{
    font-weight: 600;
    background-color: #ff9dcb;
    border: transparent;
    color: #E51376;
    border-radius: 0.5rem;
    padding: 0.5rem 3rem;
    
}
button:hover{
    cursor: pointer;
    color: #ff9dcb;
    background-color: #E51376;
}

.row{
    padding-top: 10rem;
    width: 100%;
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
}

.card{
    position: relative;
    flex: 1;
    height: 20rem;
    margin: 3rem;
    border-radius: 3rem;
    max-width: 30rem;
    border: dashed 0.5vh #ff9dcb;
    transition: 1s ease-out;
    color: #E51376;
    font-size: 2rem;
    text-align: center;
    font-weight: 700;
    z-index: 999;
}

.card:hover{
    background: #ff9dcb;
    color: #E51376;
}
.card h4{
    padding-bottom: -2rem;
    margin-top: 1.5rem;
    margin-bottom: 0;
}
.card h5{
    color: #00021B;
    padding: 1rem;
}

@media screen and (max-width:950px){
    .card{
        flex: 100%;
        max-width: 20rem;
        height: 10rem;

    }
    .card h5{
        font-size: 0.8rem;
    }
}

@keyframes slide-right {
    from {
        left: -50%;
    }
}

@keyframes slide-up {
    from {
        top: 150%;
    }
}

@keyframes slide-down {
    from {
        top: -50%;
    }
}

@keyframes slide-left {
    from {
        left: 150%;
    }
}

